# language-translation-tool

./: .gitignore  README.md  pyproject.toml  python test_services_interactive.py  requirements.txt
src/: app.py
src/config/: settings.py
src/services/: language_detector.py  translator.py  tts_service.py
src/ui/: styles.py
src/utils/: cache.py  constants.py  validators.py
tests/: test_config.py  test_services.py
